--- a/game.css
+++ b/game.css
@@ -7,10 +7,10 @@ body {
 }
 
 #board {
-    width: 450px;
-    height: 450px;
+    width: 600px;
+    height: 600px;
     background-color: purple;
-    border: 5px solid slategray;
+    border: 5px solid white;
     border-radius: 10px;
     margin: 0 auto;
     display: flex;
@@ -20,4 +20,9 @@ body {
 #board img {
     width: 50px;
     height: 50px;
+}
+#score {
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
+    text-align: left;
 }
