--- a/game.css
+++ b/game.css
@@ -20,9 +20,13 @@ body {
 #board img {
     width: 50px;
     height: 50px;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: large;
 }
 #score {
     font-family: 'Times New Roman', Times, serif;
     color: white;
     text-align: left;
+
 }
