--- a/game.css
+++ b/game.css
@@ -15,6 +15,9 @@ body {
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+    box-shadow: 0px 0px 18px 40px rgba(222, 13, 208, 0.38);
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
 
 #board img {
@@ -24,9 +27,41 @@ body {
     font-family: 'Times New Roman', Times, serif;
     font-size: large;
 }
+
 #score {
     font-family: 'Times New Roman', Times, serif;
     color: white;
     text-align: left;
 
+}
+
+.buttons {
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    line-height: 15px;
+    padding: 3px;
+    border-radius: 45px;
+    font-family: Georgia, serif;
+    font-weight: normal;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+    background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 50%, rgb(20, 78, 117) 100%);
+    box-shadow: rgb(0, 0, 0) 5px 5px 15px 5px;
+    border: 2px solid rgb(28, 110, 164);
+    display: inline-block;
+}
+
+.buttons:hover {
+    background: #1C6EA4;
+}
+
+.buttons:active {
+    background: #144E75;
+}
+
+h1 {
+    color: rgb(247, 193, 193);
+    text-shadow: rgb(252, 239, 239, 0.60) 4px 3px 10px;
 }
